--- a/gb/21/2/20/n12764506.md
+++ b/gb/21/2/20/n12764506.md
@@ -1,25 +1,25 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dxvcno324/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/dxvcno324/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/dxvcno324/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dxvcno324/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/dxvcno324/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dxvcno324/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/dxvcno324/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dxvcno324/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/dxvcno324/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dxvcno324/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/dxvcno324/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dxvcno324/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/dxvcno324/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dxvcno324/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/dxvcno324/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dxvcno324/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/dxvcno324/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/dxvcno324/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/dxvcno324/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/dxvcno324/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dxvcno324/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dxvcno324/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dxvcno324/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dxvcno324/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【财商天下】德州大停电 天灾还是人祸</h2>
-<a href="https://git.io/Jt9Zg"><img width="600" src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/dxvcno324/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://dh48pl2d5tlkv.cloudfront.net/C6ta5pNXi"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>【财商天下】美国德州数百万人大停电，是何原因？它是天灾还是人祸？（大纪元香港新闻中心）
 </h6>
 <hr>
-	<p>【大纪元2021年02月20日讯】过去一周，强烈<ahref="https://github.com/dxvcno324/djy/blob/master/gb/tag/%E6%9A%B4%E9%A3%8E%E9%9B%AA.md#1">暴风雪</a>连日袭击美国，已有至少30多人因酷寒相关因素丧生，美国中南部多个地区的低温，已经打破了数十年甚至百年的纪录。其中，德克萨斯州的灾情最为严重，暴风雪导致用电量暴增、<ahref="https://github.com/dxvcno324/djy/blob/master/gb/tag/%E7%94%B5%E7%BD%91.md#1">电网</a>瘫痪，有数百万人没水没电，在严寒中苦熬，有电的家庭则要忍受飙升百倍的电价账单，同时，德州的能源业和晶片制造业也都受到重创。</p>
-<p>德州的<ahref="https://github.com/dxvcno324/djy/blob/master/gb/tag/%E7%94%B5%E7%BD%91.md#1">电网</a>为何会大面积瘫痪？这背后到底是何原因？</p>
-<p><a src=""></a><a href="https://git.io/Jt9Zg"><img width="600" src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/dxvcno324/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/uDDN27k64gs" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+	<p>【大纪元2021年02月20日讯】过去一周，强烈<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9A%B4%E9%A3%8E%E9%9B%AA.md#1">暴风雪</a>连日袭击美国，已有至少30多人因酷寒相关因素丧生，美国中南部多个地区的低温，已经打破了数十年甚至百年的纪录。其中，德克萨斯州的灾情最为严重，暴风雪导致用电量暴增、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%94%B5%E7%BD%91.md#1">电网</a>瘫痪，有数百万人没水没电，在严寒中苦熬，有电的家庭则要忍受飙升百倍的电价账单，同时，德州的能源业和晶片制造业也都受到重创。</p>
+<p>德州的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%94%B5%E7%BD%91.md#1">电网</a>为何会大面积瘫痪？这背后到底是何原因？</p>
+<p><a src=""></a><a href="https://dh48pl2d5tlkv.cloudfront.net/C6ta5pNXi"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/uDDN27k64gs" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <h2>无水无电无暖气 民众苦不堪言</h2>
 <p>德州地处美国中南部，本是一个气候温暖的州，但是在过去一周里，因为一道源自美加边境的“北极冷锋”席卷全美，带来大量雨雪和极寒气温，造成德州气温一度降到摄氏零下19度，为1989年以来的最低。</p>
 <p>往年的这个时候，德州达拉斯的最高气温在摄氏15度左右，但是这几天的最高气温只有摄氏零下10度，比往年低了摄氏25度左右。</p>
-<p>从2月15日起，<ahref="https://github.com/dxvcno324/djy/blob/master/gb/tag/%E6%9A%B4%E9%A3%8E%E9%9B%AA.md#1">暴风雪</a>造成电网瘫痪，导致德州超过400万人停电超过36小时。直到2月18日时，仍然有接近50万人在断电的生活中煎熬。</p>
+<p>从2月15日起，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9A%B4%E9%A3%8E%E9%9B%AA.md#1">暴风雪</a>造成电网瘫痪，导致德州超过400万人停电超过36小时。直到2月18日时，仍然有接近50万人在断电的生活中煎熬。</p>
 <p>那与此同时，停电也影响到了供水设施，可能造成自来水污染，德州700万居民被告知，要先煮沸自来水后再饮用。州长还敦促居民在可能的情况下切断家中水源，以防水管破裂。</p>
 <p>叫苦连天的民众，纷纷在社交媒体上贴出照片，显示自家的惨况，有的是水龙头直接结冻；有的是家中鱼缸冻成了一大块冰，里面养的金鱼全部冻死；也有水管冻裂后漏出来的水，在吊扇下冻成了很多条细长的冰柱；而这张照片，天花板的水管冻裂后，喷涌出的水流砸在一辆汽车上，瞬间就被冻成一道冰柱。</p>
 <h2>自由化市场管制 电价飞涨约200倍</h2>
 <p>低温酷寒之下大停电，已让民众苦不堪言，而天价般昂贵的电费，更让民众雪上加霜。</p>
 <p>据媒体报导，有多位德州民众接到电力公司的简讯，通知他们的账单“快要破表”，建议更换别家电力公司。一位40多岁的女性居民说，这2月份刚刚半个月的电费账单已经有2,500美元，而去年整个2月份的账单只有大约33美元。</p>
 <p>电力公司网迪（Griddy）平时会向客户收取9.99美元的固定月费，但由于德州电力可靠委员会（ERCOT）的法规漏洞，让电费市价在15日突然暴涨近200倍，原本是每百万瓦小时（megawatt-hour）不到50美元，但突然夸张的变成了9,000多美元。</p>
-<p>事实上，拥有丰富<ahref="https://github.com/dxvcno324/djy/blob/master/gb/tag/%E7%9F%B3%E6%B2%B9%E5%A4%A9%E7%84%B6%E6%B0%94.md#1">石油天然气</a>资源的德州，是美国电力自由化、私营介入程度最高的地方。长期以来，“电力自由竞争”的经济效率，也让德州政府深感自豪。管制松散的市场也带来了显而易见的好处，那就是便宜，德州的平均电价为每千瓦时8.6美分，比全美的平均水平低大约五分之一，更是加利福尼亚州的一半。</p>
+<p>事实上，拥有丰富<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%9F%B3%E6%B2%B9%E5%A4%A9%E7%84%B6%E6%B0%94.md#1">石油天然气</a>资源的德州，是美国电力自由化、私营介入程度最高的地方。长期以来，“电力自由竞争”的经济效率，也让德州政府深感自豪。管制松散的市场也带来了显而易见的好处，那就是便宜，德州的平均电价为每千瓦时8.6美分，比全美的平均水平低大约五分之一，更是加利福尼亚州的一半。</p>
 <p>而且，因为极端严寒天气在德州很少见，所以德州也不要求电力供应商，为可能的需求激增预留出额外的电力，而电力公司更不会花大笔投资，让设备能够抗寒“越冬”。</p>
 <p>但在这一次的寒灾急冻中，巨幅的电力价格波动，也让舆论对德州电力供应商这种“效益至上”的做法开始产生疑问。</p>
 <h2>能源业和晶片产业受到冲击</h2>
@@ -53,48 +53,48 @@
 <p>策划：许巧茹、宇文铭<br />
 主播：蔚然<br />
 撰文：李松筠、财商经济研究所<br />
-<ahref="https://github.com/dxvcno324/djy/blob/master/gb/tag/%E8%B4%A2%E5%95%86%E5%A4%A9%E4%B8%8B.md#1">财商天下</a>：<ahref="http://bit.ly/3hvUfr7">http://bit.ly/3hvUfr7</a></p>
+<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B4%A2%E5%95%86%E5%A4%A9%E4%B8%8B.md#1">财商天下</a>：<ahref="http://bit.ly/3hvUfr7">http://bit.ly/3hvUfr7</a></p>
 <p>责任编辑：连书华</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/dxvcno324/djy/blob/master/gb/21/2/16/n12756063.md#1">【财商天下】政治局学量子技术 中共抢占先机？</a></li>
-<li><a href="https://github.com/dxvcno324/djy/blob/master/gb/21/2/17/n12758294.md#1">【财商天下】台积电得天下 张忠谋缔造传奇</a></li>
-<li><a href="https://github.com/dxvcno324/djy/blob/master/gb/21/2/18/n12760362.md#1">【财商天下】华信“实锤”事件 砸开信托缺口</a></li>
-<li><a href="https://github.com/dxvcno324/djy/blob/master/gb/21/2/19/n12763423.md#1">【财商天下】牛年凶险“二马”不妙</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/2/16/n12756063.md#1">【财商天下】政治局学量子技术 中共抢占先机？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/2/17/n12758294.md#1">【财商天下】台积电得天下 张忠谋缔造传奇</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/2/18/n12760362.md#1">【财商天下】华信“实锤”事件 砸开信托缺口</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/2/19/n12763423.md#1">【财商天下】牛年凶险“二马”不妙</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/dxvcno324/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/11/n10047238.md#1" target="_blank">曾伯炎：右派，在中国古拉格的生死劫</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488493.md#1" target="_blank">苦难中坚守希望 京城姐妹的跌宕人生（2）</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/19/n11462628.md#1" target="_blank">可心：香港警察有选择“枪口抬高一寸”的权利</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/1/23/n3784118.md#1" target="_blank">他山：中共政法委的罪恶与政法系统人员的赎罪</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/21/2/16/n12755606.md#1">被问到如何经营企业？ 马斯克：我是外星人</a></li>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/21/2/16/n12756200.md#1">《转法轮》中提及的若干史前文明案例（1）</a></li>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/18/3/8/n10200680.md#1">【西游义趣】之二：一个信念贯穿沙僧的前世今生</a></li>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/21/2/17/n12758577.md#1">《转法轮》中提及的史前文明案例：刻石</a></li>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/21/1/21/n12703581.md#1">蒋介石教子 言传兼身教</a></li>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/18/2/13/n10138892.md#1">梅花树下的宝藏落在了谁家</a></li>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/21/2/20/n12763659.md#1">【横河观点】病毒起源之争 常识还是科学</a></li>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/21/2/18/n12760916.md#1">【罗厨寻味之年菜系列】香芋荷叶蒸鸡</a></li>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/21/2/10/n12745125.md#1">【内幕】疫情公开前习李下指令 内容成谜</a></li>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/21/2/18/n12760301.md#1">习近平女儿个资泄漏案发酵 10家长联名喊冤</a></li>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/21/2/18/n12760836.md#1">茅台暴跌5% 市值蒸发1600亿 竟与她有关</a></li>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/21/2/18/n12760790.md#1">周迅离婚后回家过年 真实素颜照惊呆网友</a></li>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/21/2/19/n12761987.md#1">41岁赵小侨宣布怀孕 求子路艰辛终如愿</a></li>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/21/2/18/n12760556.md#1">刘德华罕见谈妻小 自曝辅导女儿功课说这句话</a></li>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/21/2/18/n12760935.md#1">状告网民获赔6万人民币 范冰冰撂话警告</a></li>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/21/2/19/n12763516.md#1">沈殿霞逝世13周年 郑欣宜发长文纪念母亲</a></li>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/21/2/18/n12759689.md#1">阿富汗储存葡萄的传统方法 可保持新鲜半年</a></li>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/21/2/17/n12756631.md#1">雨水节气体内易积湿气！1碗粥去湿、养脾胃</a></li>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/21/2/19/n12762219.md#1">解密文件：美CIA或观察到火星上的古代人类</a></li>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/21/2/17/n12758505.md#1">戴两层口罩比一层有效？专家：注意1点更关键</a></li>
-<li><a href="https://github.com/sfhwyy3978/djy/blob/master/gb/21/2/19/n12761953.md#1">美国男子声称UFO降落后院 外星人送他松饼</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/dxvcno324/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/dxvcno324/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/2/20/n12764506.htm">【财商天下】德州大停电 天灾还是人祸</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/2/20/n12764506.htm">【财商天下】德州大停电 天灾还是人祸</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/dxvcno324/djy/blob/master/gb/21/2/20/n12764506.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dxvcno324/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dxvcno324/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dxvcno324/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dxvcno324/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dxvcno324/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/2/20/n12764506.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
